# VTKSpline3DPlot

./: CMakeLists.txt  README.md
include/: plot.h
src/: main.cpp  plot.cpp
